--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ attrs==22.2.0
 backcall==0.2.0
 black==22.12.0
 click==8.1.3
+colorama==0.4.6
 decorator==5.1.1
 Django==4.1.5
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.25.1
 executing==1.2.0
 inflection==0.5.1
@@ -26,6 +28,7 @@ psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.14.0
+PyJWT==2.6.0
 pyrsistent==0.19.3
 python-dotenv==0.21.0
 pytz==2022.7
@@ -33,6 +36,8 @@ PyYAML==6.0
 six==1.16.0
 sqlparse==0.4.3
 stack-data==0.6.2
+tomli==2.0.1
 traitlets==5.8.0
+tzdata==2022.7
 uritemplate==4.1.1
 wcwidth==0.2.5
